--- a/css/app.css
+++ b/css/app.css
@@ -4,17 +4,15 @@
 :root { 
 	--focus: transparent; /* disable buttons outline:; or change its color */
 
-	--fontScale: 1.0; /* change body font size */
+	--globalScale: 1.0; /* change body font size */
 	--hScale: 1.0; /* change headings font size */
-	--globalScale: 1.0; /* change both body & headings font size */
 }
 
 /*** Dark mode */
 :where(.dark-mode, #dark-mode, [dark-mode], [data-mode="dark"]) {  }
 
 @supports (font-variation-settings: normal) { :root { --fontFamily: var(--fontFamilyVar); } } /* If Variable fonts are supported */
-a, a:hover { text-decoration: none; } /* remove underline from links */
-
+a, a:hover { --linkDecoration: none; --linkDecorationHover: none } /* remove underline from links */
 
 /* ------------------
   media query
@@ -29,7 +27,6 @@ a, a:hover { text-decoration: none; } /* remove underline from links */
 /** Skelet. BREAKING POINTS */
 @media (max-width: 777px) {} /* Grid SMALL becomes active */
 @media (min-width: 778px) and (max-width: 1024px) {} /* Grid MEDIUM becomes active */
-@media (min-width: 1599px) {} /* Grid LARGE becomes active */
 
 /** General breaking points */
 /* Device = Most of Mobile (Portrait) | Screen = b/w 0 to 480px */
